<resources>
    <string name="app_name">ReadIl-Legal</string>
    <string-array name="page_options">
        <item>Page 1</item>
        <item>Page 2</item>
        <item>Page 3</item>
        <item>Page 4</item>
        <item>Page 5</item>
        <item>Page 6</item>
        <item>Page 7</item>
        <item>Page 8</item>
        <item>Page 9</item>
        <item>Page 10</item>
    </string-array>
    <string name="cover_image_desc">Cover image of the manga</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="year">Year</string>
    <string name="tags">Tags</string>
    <string name="status">Status</string>
    <string name="last_uploaded">Last Uploaded</string>
    <string name="year_label">Year: </string>
    <string name="tags_label">Tags: </string>
    <string name="status_label">Status: </string>
    <string name="last_uploaded_label">Last Uploaded: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>