<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.MangaDetailFragment"
    android:background="@color/pallet4">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_detailCover"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/cover_image_desc"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:layout_gravity="start"
                android:fontFamily="@font/open_sans_extrabold"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_light"
                android:lineSpacingExtra="4dp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detailYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="2021"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detailStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ongoing"
                    android:paddingStart="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_uploaded_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detailLastUploaded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chapter 10"
                    android:paddingStart="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags_label"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detailTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:paddingStart="8dp"
                    android:text="Action, Adventure"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pallet2"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/lato"
                    android:text="Daftar Chapter"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.Toolbar>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewChapters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/chapter_button"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="back button"
            android:paddingTop="4dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@android:color/black" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="240dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="favorite"
            android:src="@android:drawable/btn_star_big_off" />
    </LinearLayout>

</FrameLayout>
